Bug 461727 - [Nightly] Layer thumbnail distort preview proportion when erase in blank area
Summary: [Nightly] Layer thumbnail distort preview proportion when erase in blank area
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on: 459273
Blocks:
  Show dependency treegraph
 
Reported: 2022-11-12 13:25 UTC by Protoniv
Modified: 2022-11-17 07:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Reproduce when erase something (226.53 KB, video/mp4)
2022-11-12 13:25 UTC, Protoniv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Protoniv 2022-11-12 13:25:04 UTC
Created attachment 153688 [details]
Reproduce when erase something

The thumbnail now does not change its boundary when erase, but still take those transparent pixel made by eraser into account, so the preview distort.

This happened after 5.2.0-prealpha-55b758bc2f (Windows) and 5.2.0-prealpha-ebe496e16f (Appimage) nightly build
Seems after the patch in bug 459273

STEPS TO REPRODUCE
1. Create a document, on the transparent layer, draw a circle on the left
2. switch to eraser, erase on the right side of canvas
3. thumbnail distort, pushing to left
Comment 1 amyspark 2022-11-12 15:50:34 UTC
Dmitry, can you have a look?
Comment 2 Dmitry Kazakov 2022-11-17 07:38:46 UTC
Git commit b67e2556bb2944f56c0a4ca9bd77a1f29f8e05df by Dmitry Kazakov.
Committed on 17/11/2022 at 07:38.
Pushed by dkazakov into branch 'master'.

Fix aspect ratio of the layer thumbnails

M  +2    -1    libs/image/kis_paint_device_cache.h

https://invent.kde.org/graphics/krita/commit/b67e2556bb2944f56c0a4ca9bd77a1f29f8e05df