Fix aspect ratio of the layer thumbnails

BUG:461727